--- a/css/all.css
+++ b/css/all.css
@@ -56,7 +56,7 @@ body{
     font-family: 'Noto Sans TC', sans-serif;
     line-height: 1.5;
     background-image: url(../image/bg_home.svg),url(../image/ball01.svg);
-    background-position: right top, -15% 65%;
+    background-position: right top, -15% 20%;
     background-repeat: no-repeat, no-repeat;
     color: #221E1F;
 }
@@ -83,6 +83,11 @@ sub{
 h1{
     width: 218px;
 }
+.wrap{
+    background-image: url(../image/ball02.svg),url(../image/ball03.svg);
+    background-position: 105% 50%, 10% 75%;
+    background-repeat: no-repeat,no-repeat ;
+}
 .container{
     max-width: 1120px;
     margin: 0 auto;
@@ -104,6 +109,7 @@ h1{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 200px;
 }
 .banner-txt{
     width: 50%;
@@ -124,9 +130,6 @@ h1{
     width: 532px;
     height: auto;
 }
-.banner{
-    margin-bottom: 200px;
-}
 .platform,.customization,.features{
     margin-bottom: 100px;
 }
@@ -140,12 +143,12 @@ h1{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin: 0px -49px;
+    /*margin: 0px -59px;*/
 }
 .plat-item{
     width: 33.33%;
     text-align: center;
-    padding: 0px 65px;
+    padding: 0px 59px;
 }
 .plat-item img{
     width: 90px;
@@ -202,10 +205,10 @@ h1{
     box-shadow: 0px 2px 10px #00000014;
     border-radius: 0px 0px 12px 12px;
     padding: 16px 16px 24px 16px;
+    background: #FFF;
 }
 .features{
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 .feature-type{
@@ -214,7 +217,7 @@ h1{
     width: 50%;
 }
 .feature-item{
-    width: 230px;
+    width: 40%;
     padding: 32px 32px 48px 32px;
     border-radius: 12px;
     box-shadow: 0px 2px 10px #00000014;
@@ -257,7 +260,7 @@ h1{
     font-size: 18px;
     margin-bottom: 24px;
 }
-.feature-content a.btn-price{
+.feature-content a.btn-price,.footer-plan a.btn-price{
     background: #56C4C5 0% 0% no-repeat padding-box;
     border: 1px solid #56C4C5;
     border-radius: 27px;
@@ -267,7 +270,7 @@ h1{
     display: inline-block;
     text-decoration: none;
 }
-.feature-content a.btn-price:hover{
+.feature-content a.btn-price:hover,.footer-plan a.btn-price:hover{
     background: #FFFFFF 0% 0% no-repeat padding-box;
     color: #56C4C5;
     border: #56C4C5 solid 1px;
@@ -277,20 +280,25 @@ h1{
 }
 .eval h2{
     font-size: 32px;
-    margin-bottom: 48px;
+    font-weight: bold;
+    margin-bottom: 104px;
     text-align: center;
 }
 .eval_new{
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
 }
 .eval_item{
+    width: 32%;
     position: relative;
     padding: 48px 32px 24px 32px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 2px 10px #00000014;
     border-radius: 12px;
     margin-right: 16px;
+}
+.noon{
+    margin-right: -16px;
 }
 .eval_item>img{
     width: 80px;
@@ -317,10 +325,44 @@ h1{
     display: flex;
     justify-content: space-between;
 }
+.footer{
+    background: #F5F5F5;
+    text-align: center;
+    
+}
+.footer .content{
+    font-size: 16px;
+    padding: 16px 0px;
+}
+.footer-plan{
+    background-image: url(../image/home_footer.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 503px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 260px;
+    align-items: center;
+}
+.footer-plan h2{
+    font-size: 32px;
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 48px;
+}
+.footer-plan a.btn-price{
+    margin-bottom: 100px;
+}
+
 @media(max-width:991px){
     body{
-        background-position: right top;
-        background-size: 75%;
+        background-position: right top,-35% 18%;
+        background-size: 70%,35%;           
+    }
+    .wrap{
+        background-position: 125% 42%,-20% 165%;
+        background-size: 25% 80%;  
     }
     .container{
         padding: 0px 20px;
@@ -344,6 +386,9 @@ h1{
     .plat-item h5{
         font-size: 20px;
     }
+    /*.plat-type{
+        margin: 0px -40px;
+    }*/
     .plat-item{
         padding: 0px 40px;
     }
@@ -356,15 +401,28 @@ h1{
 }
 @media(max-width:767px){
     body{
-        background-image: url(../image/bg_home_sm.svg);
-        background-position: 35% 5%;
-        background-size: 95%;
+        background-image: url(../image/bg_home_sm.svg),url(../image/ball01.svg);
+        background-position: 35% 9%, -15% 21%;
+        background-size: 95%,20%;
+    }
+    .wrap{
+        background-position: 125% 52%,-10% 79%;
+        background-size: 25%,20%;  
     }
     .container{
         padding: 0px 20px;
+        margin-bottom: 90px;
     }
     .header{
         padding: 24px 20px;
+    }
+    .banner{
+        flex-direction: column;
+        margin-bottom: 95px;
+    }
+    .banner-txt{
+        width: 100%;
+        margin-bottom: 32px;
     }
     .banner-txt h2{
         font-size: 16px;
@@ -376,7 +434,7 @@ h1{
         font-size: 18px;
     }
     .banner img{
-        max-width: 50%;
+        max-width: 80%;
         height: auto;
     }
     .plat-type{
@@ -408,9 +466,49 @@ h1{
     }
     .cus-txt{
         padding: 16px 20px 24px 20px;
-    } 
+    }
+    .features{
+        flex-direction: column-reverse;
+    }
+    .feature-type{
+        width: 100%;
+    }
+    .feature-item{
+        width: 45%;
+        padding: 32px 32px 48px 32px;
+        border-radius: 12px;
+        box-shadow: 0px 2px 10px #00000014;
+    }
+    .feature-content{
+        margin-bottom: 32px;
+        width: 100%;
+        text-align: center;
+    }
+    .feature-content h6{
+        font-size: 30px;
+    }
+    .eval h2{
+        font-size: 30px;
+    }
+    .comment_star{
+        flex-direction: column;
+    }
+    .comment_star span{
+        margin-bottom: 10px;
+    }
+    .footer-plan h2{
+        font-size: 28px;
+    }
 }
 @media(max-width:575px){
+    body{
+        background-position: 35% 5.5%, -75% 11%;
+        background-size: 95%,50%;
+    }
+    .wrap{
+        background-position: 125% 54%,-10% 78%;
+        background-size: 45%,30%;  
+    }
     .header{
         margin-bottom: 32px;
         align-items: center;
@@ -421,11 +519,7 @@ h1{
         width: 130px;
     }
     .banner{
-        flex-direction: column;
-        margin-bottom: 92px;
-    }
-    .banner-txt{
-        width: 100%;
+        margin-bottom: 98px;
     }
     .banner-txt h2{
         font-size: 16px;
@@ -437,25 +531,23 @@ h1{
     }
     .banner-txt p{
         font-size: 16px;
-        margin-bottom: 30px;
     }
     .banner img{
         max-width: 80%;
     }
     .platform{
-        margin-bottom: 60px;
+        margin-bottom: 36px;
     }
     .platform h4{
         font-size: 28px;
         margin-bottom: 32px;
     }
     .plat-type{
-        display: flex;
-        flex-wrap: wrap;
-        margin: 0;
+        flex-direction: column;
+        align-items: center;
     }
     .plat-item{
-        width: 100%;
+        width: 70%;
         text-align: center;
         padding: 0px;
         margin-bottom: 24px;
@@ -467,6 +559,12 @@ h1{
         font-size: 18px;
         margin: 16px 0px;
     }
+    .plat-item p{
+        padding: 0px 20px;
+    }
+    .customization{
+        margin-bottom: 36px;
+    } 
     .customization h4{
         font-size: 28px;
         margin-bottom: 16px;
@@ -477,8 +575,6 @@ h1{
         margin-bottom: 32px;
     }
     .cus-type{
-        display: flex;
-        flex-wrap: wrap;
         margin: 0;
     }
     .cus-item{
@@ -493,5 +589,64 @@ h1{
         border-radius: 0px 0px 12px 12px;
         padding: 16px 16px 24px 16px;
     }
-
+    .transfer,.integrate{
+        margin: 0;
+    }
+    .features{
+        margin-bottom: 60px;
+    }
+    .feature-type{
+        width: 70%;
+    }
+    .feature-item{
+        width: 100%;
+        margin-bottom: 24px;
+    }
+    .feature-content{
+        margin-bottom: 32px;
+        text-align: center;
+    }
+    .feature-content h6{
+        font-size: 28px;
+    }
+    .feature-content p{
+        font-size: 16px;
+        margin-bottom: 16px;
+    }
+    .eval{
+        margin-bottom: 10px;
+    }
+    .eval h2{
+        font-size: 28px;
+        margin-bottom: 88px;
+    }
+    .eval_new{
+        flex-direction: column;
+        align-items: center;
+    }
+    .eval_item{
+        width: 90%;
+        margin-right: 0;
+        padding: 48px 16px 16px 16px;
+        margin-bottom: 90px;
+    }
+    .comment_star{
+        flex-direction: row;
+    }
+    .eval p{
+        padding-bottom: 16px;
+        margin-bottom: 16px;
+    }
+    .comment_star span{
+        margin-bottom: 0px;
+    }
+    .footer-plan{
+        background-image: url(../image/footer_sm.svg);
+        height: 461px;
+        padding-top: 293px;
+    }
+    .footer-plan h2{
+        font-size: 24px;
+        padding-bottom: 24px;
+    }
 }
