--- a/css/all.css
+++ b/css/all.css
@@ -1,57 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-*,
-*::before,
-*::after {
-    box-sizing: border-box
-}
-
 body{
     font-family: 'Noto Sans TC', sans-serif;
     line-height: 1.5;
@@ -119,7 +65,7 @@ h1{
     font-weight: bold;
     color: #56C4C5;
 }
-.banner-txt h3{
+.banner-txt .title{
     font-size: 48px;
     font-weight: bold;
 }
@@ -177,12 +123,12 @@ h1{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin: 0px -16px;
+    margin: 0px -8px;
 }
 .cus-item{
     width: 25%;
     text-align: center;
-    padding: 0px 16px;
+    padding: 0px 8px;
 }
 .cus-item img{
     border-radius: 12px 12px 0px 0px;
@@ -251,7 +197,7 @@ h1{
 .feature-content{
     width: 50%;
 }
-.feature-content h6{
+.feature-content h4{
     font-size: 32px;
     font-weight: bold;
     margin-bottom: 16px;
@@ -278,7 +224,7 @@ h1{
 .eval{
     margin-bottom: 130px;
 }
-.eval h2{
+.eval h4{
     font-size: 32px;
     font-weight: bold;
     margin-bottom: 104px;
@@ -339,13 +285,12 @@ h1{
     background-repeat: no-repeat;
     background-size: contain;
     height: 503px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding-top: 260px;
-    align-items: center;
+    padding-top: 300px;
+    text-align: center;
+    background-position: center;
+    background-size: cover;
 }
-.footer-plan h2{
+.footer-plan h4{
     font-size: 32px;
     font-weight: bold;
     text-align: center;
@@ -373,7 +318,7 @@ h1{
     .banner-txt h2{
         font-size: 16px;
     }
-    .banner-txt h3{
+    .banner-txt .title{
         font-size: 40px;
     }
     .banner-txt p{
@@ -427,7 +372,7 @@ h1{
     .banner-txt h2{
         font-size: 16px;
     }
-    .banner-txt h3{
+    .banner-txt .title{
         font-size: 40px;
     }
     .banner-txt p{
@@ -484,10 +429,10 @@ h1{
         width: 100%;
         text-align: center;
     }
-    .feature-content h6{
+    .feature-content h4{
         font-size: 30px;
     }
-    .eval h2{
+    .eval h4{
         font-size: 30px;
     }
     .comment_star{
@@ -525,7 +470,7 @@ h1{
         font-size: 16px;
         margin-bottom: 8px;
     }
-    .banner-txt h3{
+    .banner-txt .title{
         font-size: 32px;
         margin-bottom: 16px;
     }
@@ -606,7 +551,7 @@ h1{
         margin-bottom: 32px;
         text-align: center;
     }
-    .feature-content h6{
+    .feature-content h4{
         font-size: 28px;
     }
     .feature-content p{
@@ -616,7 +561,7 @@ h1{
     .eval{
         margin-bottom: 10px;
     }
-    .eval h2{
+    .eval h4{
         font-size: 28px;
         margin-bottom: 88px;
     }
@@ -644,8 +589,14 @@ h1{
         background-image: url(../image/footer_sm.svg);
         height: 461px;
         padding-top: 293px;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        background-position:top;
+        background-size: auto;
     }
-    .footer-plan h2{
+    .footer-plan h4{
         font-size: 24px;
         padding-bottom: 24px;
     }
